--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Style This HTML Lab</title>
-  
+  <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 
 <body>
