--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Style This HTML Lab</title>
+  <link href='http://fonts.googleapis.com/css?family=Devonshire' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 
